--- a/Index.html
+++ b/Index.html
@@ -8,19 +8,33 @@
 </head>
 <body>
     <header>
-        <h1>Consultorio Jurídico</h1>
-        <nav>
-            <ul>
-                <li><a href="#about">Sobre nosotros</a></li>
-                <li><a href="#services">Servicios</a></li>
-                <li><a href="#contact">Contacto</a></li>
-            </ul>
-        </nav>
-    </header>
+        <div class="container">
+            <div class="logo">
+                <!-- Aquí puedes poner tu imagen de logo -->
+                <img src="./Imagenes/Logo - Dr Julio Sarango.png" alt="Logo del consultorio jurídico">
+            </div>
+            <div class="cta-button">
+                <a href="tel:+1234567890" class="phone-number">Llamar ahora: +1234567890</a>
+            </div>
+            <nav class="main-nav">
+                <ul>
+                    <li><a href="#inicio">Inicio</a></li>
+                    <li><a href="#about">Sobre nosotros</a></li>
+                    <li><a href="#services">Servicios</a></li>
+                    <li><a href="#blog">Blog o Noticias</a></li>
+                    <li><a href="#contact">Contacto</a></li>
+                    <li><a href="#location">Ubicación</a></li>
+                    <li><a href="#faq">FAQ</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>    
     
     <section id="about">
-        <h2>Sobre nosotros</h2>
-        <p>Breve descripción del consultorio jurídico y del Dr. Julio Sarango.</p>
+        <div class="content">
+            <h1>Dr. Julio Sarango</h1>
+            <p>Defendiendo tus derechos, protegiendo tu futuro.</p>
+        </div>
     </section>
     
     <section id="services">
